<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_camera_fusion</name>
  <version>0.0.1</version>
  <description>Lidar Camera Fusion for Point Cloud Coloring</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-all-dev</depend>
  <!-- OpenMP 通常是编译器自带的，如果是特定库可以用 libomp-dev，如果 rosdep 报错找不到 key，可以尝试删除这行 -->
  <depend>libomp-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>